tests/snapshots/yaml_suite_snapshots__yaml_suite_LX3P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Implicit Flow Mapping Key on one line
  from: "@perlpunk"
  tags: complex-key mapping flow sequence 1.3-err
  yaml: "[flow]: block\n"
  tree: "+STR\n +DOC\n  +MAP\n   +SEQ []\n    =VAL :flow\n   -SEQ\n   =VAL :block\n  -MAP\n -DOC\n-STR\n"
  dump: "? - flow\n: block\n"
