tests/snapshots/yaml_suite_snapshots__yaml_suite_M29M_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "a: |\n  ab\n\n  cd\n  ef\n...\n"
  from: NimYAML tests
  json: "{\n  \"a\": \"ab\\n\\ncd\\nef\\n\"\n}\n"
  name: Literal Block Scalar
  tags: literal scalar whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL |ab\\n\\ncd\\nef\\n\n  -MAP\n -DOC ...\n-STR\n"
  yaml: "a: |\n ab\n␣\n cd\n ef\n␣\n\n...\n"
