tests/snapshots/yaml_suite_snapshots__yaml_suite_M2N8_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Question mark edge cases
  from: "@ingydotnet"
  tags: edge empty-key
  yaml: "- ? : x\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    +MAP\n     =VAL :\n     =VAL :x\n    -MAP\n    =VAL :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  dump: "- ? : x\n  :\n"
- yaml: "? []: x\n"
  tree: "+STR\n +DOC\n  +MAP\n   +MAP\n    +SEQ []\n    -SEQ\n    =VAL :x\n   -MAP\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  dump: "? []: x\n:\n"
