tests/snapshots/yaml_suite_snapshots__yaml_suite_M2N8_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- ? : x\n  :\n"
  from: "@ingydotnet"
  name: Question mark edge cases
  tags: edge empty-key
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    +MAP\n     =VAL :\n     =VAL :x\n    -MAP\n    =VAL :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- ? : x\n"
- dump: "? []: x\n:\n"
  tree: "+STR\n +DOC\n  +MAP\n   +MAP\n    +SEQ []\n    -SEQ\n    =VAL :x\n   -MAP\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: "? []: x\n"
