tests/snapshots/yaml_suite_snapshots__yaml_suite_M5C3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 8.21. Block Scalar Nodes
  from: "http://www.yaml.org/spec/1.2/spec.html#id2799693"
  tags: indent spec literal folded tag local-tag 1.3-err
  yaml: "literal: |2\n  value\nfolded:\n   !foo\n  >1\n value\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :literal\n   =VAL |value\\n\n   =VAL :folded\n   =VAL <!foo> >value\\n\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"literal\": \"value\\n\",\n  \"folded\": \"value\\n\"\n}\n"
  dump: "literal: |\n  value\nfolded: !foo >\n  value\n"
